--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -1,19 +1,4 @@
-.btn_redondo{
-    display: flex;
-    border-radius: 25px;
-
-    padding: 2%;
-}
-
-#filtros_icon{
-    width: fit-content;
-}
-
-.btn_redondo p{
-    padding-left: 5px;
-    margin: 0;
-}
-
+/* Estilos para la lista de juegos */
 .list_juegos{
     display: flex;
     flex-direction: column;
@@ -32,19 +17,21 @@
 
 .juego{
     display: flex;
+    flex-direction: column;
     border-radius: 10px;
 
     border: 2px solid #000000;
 
     margin: 5px;
 
-    width: 80%;
+    width: 100%;
 }
 
 .juego img{
-    padding: 10px;
     width: 100%;
-    max-width: 150px;
+
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
 }
 
 .info_juego{
@@ -53,17 +40,20 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    padding: 10px;
+    padding-left: 10px;
 }
 
 .btn_listas{
     align-self: flex-end;
     margin-left: auto;
+
     max-width: 70%;
+    padding: 2% 2% 2% 0%;
+    margin-right: 2%;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 2%;
 }
 
 .btn_listas i{
@@ -72,4 +62,89 @@
     border: 1px solid #000000;
     border-radius: 50%;
     width: fit-content;
+}
+
+/* Desplegable hamburguesa */
+
+.filtros_desplegable{
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: fit-content;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+
+    /* Transform */
+    transition: 0.5s;
+}
+
+.active{
+    left: 0%;
+
+    /* Transform */
+    transition: 0.5s;
+}
+
+/* Carrusel Filtros */
+.swiper{
+    margin: 0 !important;
+    width: 100% !important;
+}
+
+.card-item{
+    max-width: fit-content !important;
+    max-height: fit-content !important;
+    min-height: fit-content !important;
+    min-width: fit-content !important;
+    padding: 3%;
+    margin: 1%;
+
+    border: 2px solid #000000;
+    border-radius: 25px;
+
+    background-color: wheat;
+
+    display: flex;
+    flex-direction: row;
+}
+
+/* Filtros */
+
+.btn_filtros{
+    display: flex;
+    border-radius: 25px;
+    padding: 2%;
+
+    max-height: fit-content;
+}
+
+.btn_filtros p{
+    padding-left: 5px;
+    margin: 0;
+
+    max-height: fit-content;
+    min-height: fit-content;
+}
+
+#filtros_icon{
+    width: fit-content;
+
+    max-height: fit-content;
+    min-height: fit-content;
+}
+
+#filtros{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    width: 100%;
+    /* justify-content: space-around;
+    align-items: center;
+    padding: 2%; */
+}
+
+.eliminar_filtro{
+    cursor: pointer;
 }
