--- a/public/CSS/lista_ventas.css
+++ b/public/CSS/lista_ventas.css
@@ -67,3 +67,25 @@
     max-width: 14px;
     padding: 0;
 }
+
+/* Desplegable hamburguesa */
+
+.filtros_desplegable{
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: fit-content;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+
+    /* Transform */
+    transition: 0.5s;
+}
+
+.active{
+    left: 0%;
+
+    /* Transform */
+    transition: 0.5s;
+}
