Bootstrap Add, paginacion list_juegos done

--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -213,3 +213,14 @@
     color: white;
     border: none;
 }
+
+
+/* Paginación */
+
+.pag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 20px;
+}
