--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -16,23 +16,19 @@ header{
 
     border-bottom: 2px solid #000;
 
+    min-width: 100vw;
     padding: 10px 20px;
 
     position: sticky;
-
     top: 0;
 
-    background-color: #fff;
-
-    max-width: 100vw;
-
-    color: var(--color-texto) !important;
-    background-color: var(--color-fondo) !important;
+    color: var(--color-texto);
+    background-color: var(--color-fondo);
 }
 
-header img{
-    width: 100px;
-    height: 100px;
+header .logo-TDG{
+    width: 40%;
+    max-width: 200px;
 }
 
 header i{
