Reviews almost done

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -31,10 +31,10 @@ html, body{
     color: var(--color-texto-secundario) !important;
 }
 
-p{
+/* p{
     color: var(--color-texto-secundario) !important;
-}
+} */
 
-h1, h2, h3, h4, h5, h6{
+/* h1, h2, h3, h4, h5, h6{
     color: var(--color-texto) !important;
-}
+} */
