--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -16,7 +16,7 @@ header{
 
     border-bottom: 2px solid #000;
 
-    min-width: 100vw;
+    max-width: 100vw;
     padding: 10px 20px;
 
     position: sticky;
