Eliminar juegos listas done

--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -114,9 +114,10 @@
 }
 
 .enlace_juego{
-    color: black;
+    color: var(--color-texto);
 
     width: 100%;
+    margin-bottom: 1rem;
     
     text-align: center;
 }
