--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -33,8 +33,11 @@ html, body{
 
 p{
     color: var(--color-texto-secundario);
+    font-family: "Roboto", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6{
     color: var(--color-texto) !important;
+
+    font-family: "Orbitron", sans-serif;
 }
