--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -17,6 +17,7 @@ header{
     border-bottom: 2px solid #000;
 
     max-width: 100vw;
+    min-width: 100vw;
     padding: 10px 20px;
 
     position: sticky;
