--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,7 +7,7 @@
     --color-primario: #5C6BC0;
     --color-secundario: #BFA75C;
     
-    --color-fondo: #1C1C1E; /* Fondo de modo oscuro */
+    --color-fondo: linear-gradient(180deg,rgba(28, 28, 30, 1) 0%, rgba(166, 166, 166, 1) 100%);;
     --color-texto: #FFFFFF;
     --color-texto-secundario: #B0BEC5;
     
@@ -27,7 +27,7 @@ html, body{
     margin: 0;
     padding: 5px;
 
-    background-color: var(--color-fondo) !important;
+    background: var(--color-fondo) !important;
 }
 
 p{
