--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -9,6 +9,9 @@ header{
     position: relative;
     z-index: 100;
 
+    /* position: sticky;
+    top: 0; */
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -17,11 +20,7 @@ header{
     border-bottom: 2px solid #000;
 
     max-width: 100vw;
-    min-width: 100vw;
     padding: 10px 20px;
-
-    position: sticky;
-    top: 0;
 
     color: var(--color-texto);
     background-color: var(--color-fondo);
