--- a/public/CSS/juego.css
+++ b/public/CSS/juego.css
@@ -1,5 +1,9 @@
 /* CSS de la Vista de un Juego */
 
+body{
+    background: linear-gradient(180deg,rgba(28, 28, 30, 1) 50%, rgba(166, 166, 166, 1) 100%) !important;
+}
+
 /* Caracteristicas comunes de la página */
 
 .icono_ajustable{
@@ -147,3 +151,4 @@
 .descripcion_juego h2{
     margin: 4%;
 }
+
