--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,12 +7,14 @@
     --color-primario: #5C6BC0;
     --color-secundario: #BFA75C;
     
-    --color-fondo: linear-gradient(180deg,rgba(28, 28, 30, 1) 0%, rgba(166, 166, 166, 1) 100%);;
+    --color-fondo: linear-gradient(180deg,rgba(28, 28, 30, 1) 20%, rgba(166, 166, 166, 1) 100%);
     --color-texto: #FFFFFF;
     --color-texto-secundario: #B0BEC5;
     
     --color-tarjeta: #2C2C2E;
-    --color-tarjeta-secundario: #3A3A3C; 
+    --color-tarjeta-secundario: #67676efd; 
+
+    --color-borde-neon: #FFFFFF;
 
     --color-boton-texto: black;
 
@@ -43,4 +45,8 @@ h1, h2, h3, h4, h5, h6{
 
 .boton p{
     color: var(--color-boton-texto) !important;
+}
+
+a{
+    text-decoration: none !important;
 }
