--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -26,7 +26,7 @@ header{
     background-color: var(--color-fondo);
 }
 
-header .logo-TDG{
+.logo-TDG{
     width: 40%;
     max-width: 200px;
 }
@@ -35,4 +35,74 @@ header i{
     padding: 10px;
     background-color: var(--color-primario);
     border-radius: 8px;
+}
+
+.menu-hamburguesa{
+    position: absolute;
+    top: 0;
+    left: -100%;
+
+    width: 100%;
+
+    height: fit-content;
+    background-color: var(--color-tarjeta);
+    z-index: 9999;
+
+    /* Transform */
+    transition: 0.5s;
+
+}
+
+.menu-hamburguesa div:nth-child(1){
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.links-hamburguesa{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.busqueda-juego{
+    width: 90% !important;
+
+    margin-bottom: 5%;
+}
+
+.link-hamburguesa{
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    justify-self: start;
+
+    text-align: start;
+
+    margin-bottom: 2%;
+}
+
+.link-hamburguesa i{
+    font-size: 200%;
+    margin-right: 5%;
+
+    color: var(--color-texto);
+}
+
+.active{
+    left: 0%;
+    right: 0%;
+
+    /* Transform */
+    transition: 0.5s;
+}
+
+.cerrar-hamburguesa{
+    color: var(--color-texto);
+
+    font-size: 200%;
+
+    margin: 3%;
 }
