--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -1,3 +1,36 @@
+/* Página CSS de Main */
+
+.landing{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/TDG/public/IMG/main-landing-ordered-games.webp");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+}
+
+.landing-texto{
+    width: 50% ;
+
+    padding: 5%;
+}
+
+.landing .boton-ver-juegos{
+    display: inline;
+
+    padding: 3%;
+
+    border-radius: 20px;
+
+    background-color: var(--color-primario);
+
+    color: var(--color-texto);
+}
+
+/* Juegos recien Añadidos */
 .recien_añadidos {
     width: 100%;
     height: 60vh;
@@ -138,13 +171,13 @@
 
 /* Media Querys */
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 640px){
     .recien_añadidos__container:has(.recien_añadidos__item:hover){
         animation-play-state: paused;
     }
     
     .recien_añadidos__item{
-        width: 40vw;
+        width: 60vw;
         transition: 0.3s;
     }
 
@@ -162,6 +195,10 @@
 }
 
 @media screen and (min-width: 768px) {
+    .recien_añadidos{
+        height: 60vh;
+    }
+
     .recien_añadidos__container:has(.recien_añadidos__item:hover){
         animation-play-state: paused;
     }
