--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -19,6 +19,10 @@
     left: 0%;
     right: 0%;
 
+    background-color: var(--color-secundario);
+
+    border-radius: 0.375rem;
+
     /* Transform */
     transition: 0.5s;
 }
@@ -94,7 +98,7 @@
 
 /* Lista de Juegos */
 
-.list_juegos{
+#list_juegos{
     display: flex;
     flex-direction: column;
     justify-self: center;
