--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -10,10 +10,11 @@
     background-position: center;
 
     width: 100%;
+    height: 50vh;
 }
 
 .landing-texto{
-    width: 50% ;
+    width: 100%;
 
     padding: 5%;
 }
@@ -21,7 +22,7 @@
 .landing .boton-ver-juegos{
     display: inline;
 
-    padding: 3%;
+    padding: 1%;
 
     border-radius: 20px;
 
@@ -97,76 +98,63 @@
 
 /* Reviews */
 
-.review{
+
+.reviews-h2{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
-.review_item{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.btn-add-review{
+    display: inline;
 
-    width: 80vw;
-    margin: 10px;
+    margin-left: 2%;
+    padding: 1%;
+
+    background-color: var(--color-secundario);
 
     border-radius: 20px;
-
-    background-color: rgb(135, 149, 189);
 }
 
-.cabecera_review{
+.lista_reviews{
     display: flex;
-    flex-direction: row;
-    justify-content: start;
+    flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 10vh;
+    justify-content: center;
 }
 
-.review img{
-    width: 10vw;
-    height: 10vw;
-    border-radius: 50%;
-    object-fit: cover;
+.review{
+    width: 90vw;
+    background-color: var(--color-tarjeta);
 
-    margin: 10px;
+    padding: 2%;
+    margin: 3%;
 }
 
-.review_texto{
-    width: 80%;
-    height: 100%;
-    padding: 10px;
-    text-align: justify;
+.cabecera_review img{
+    width: 15%;
+    clip-path: circle(50% at 50% 50%);
 }
 
 .review_footer{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 10vh;
-}
-
-.review_footer .review_rating{
-    justify-self: flex-start;
+    justify-content: end;
 }
 
 .review_ver_mas_container{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
 
-    cursor: pointer;
+    color: var(--color-boton-texto);
+    background-color: var(--color-secundario);
+
+    width: fit-content;
+    padding: 2%;
+
+    border-radius: 20px;
 }
 
-.review_footer .review_ver_menos{
-    min-width: 40px;
+.review_ver_mas{
+    margin: 0;
 }
 
 /* Media Querys */
@@ -183,7 +171,7 @@
 
     .recien_añadidos__item:hover{
         width: 45vw;
-        box-shadow: 0 0 20px white;
+        box-shadow: 0 0 20px var(--color-borde-neon);
         transition: 0.3s;
     }
 
@@ -211,7 +199,7 @@
     .recien_añadidos__item:hover{
         width: 32vw;
         
-        box-shadow: 0 0 20px white;
+        box-shadow: 0 0 20px var(--color-borde-neon);
 
         transition: 0.3s;
     }
