--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -19,6 +19,7 @@ header{
 
     border-bottom: 2px solid #000;
 
+    width: 100%;
     max-width: 100vw;
     padding: 10px 20px;
 
@@ -26,8 +27,22 @@ header{
     background-color: var(--color-fondo);
 }
 
+.izq{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.izq a{
+    max-width: 80px;
+}
+
+.izq p{
+    margin: 0 10%;
+}
+
 .logo-TDG{
-    width: 40%;
+    width: 100%;
     max-width: 200px;
 }
 
@@ -43,6 +58,7 @@ header i{
     left: -100%;
 
     width: 100%;
+    padding: 10px 20px;
 
     height: fit-content;
     background-color: var(--color-tarjeta);
@@ -105,4 +121,8 @@ header i{
     font-size: 200%;
 
     margin: 3%;
+}
+
+.logo-TDG{
+    max-width: 80px;
 }
