--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -176,8 +176,8 @@
     }
 
     .card-item:hover{
-        box-shadow: 0 0 20px var(--color-backlog);
-        border: 5px solid var(--color-backlog);
+        box-shadow: 0 0 20px var(--color-borde-neon);
+        border: 5px solid var(---color-borde-neon);
     }
     
 }
@@ -205,7 +205,7 @@
     }
 
     .card-item:hover{
-        border: 5px solid var(--color-backlog);
-        box-shadow: 0 0 20px var(--color-backlog);
+        border: 5px solid var(--color-borde-neon);
+        box-shadow: 0 0 20px var(--color-borde-neon);
     }
 }
