--- a/public/CSS/carrusel.css
+++ b/public/CSS/carrusel.css
@@ -1,3 +1,10 @@
+/* CSS del Carrusel*/
+
+/* Sin esto los slides se aumentan exponencialmente */
+.swiper{ 
+    width: 100vw;
+}
+
 .card-wrapper{
     max-width: 100%;
     margin: 5%;
