--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -3,28 +3,32 @@
 /* Desplegable Filtro */
 
 .filtros_desplegable{
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
+    display: flex;
+    flex-direction: column;
 
-    /* Transform */
-    transition: 0.5s;
+    align-self: start;
+
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    /* z-index: 9999; */
+
+    color: var(--color-texto);
+    /* background-color: var(--color-secundario); */
+    border-radius: 0.375rem;
+}
+
+.filtros_desplegable .filtros_opciones{
+    display: flex;
+    flex-direction: column;
 }
 
 .active{
-    left: 0%;
-    right: 0%;
-
-    background-color: var(--color-secundario);
-
-    border-radius: 0.375rem;
-
+    max-height: 400px;
+    
     /* Transform */
-    transition: 0.5s;
+    transition: 0.8s ease;
 }
 
  /* Filtros especificos para el carrusel de Filtros aplicados */
