--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -96,6 +96,12 @@
     border: 5px solid transparent;
 }
 
+/* Ultimos Productos */
+
+.ultimos_productos{
+    width: 100%;
+}
+
 /* Reviews */
 
 
