--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -46,6 +46,8 @@ p{
 }
 
 h1, h2, h3, h4, h5, h6{
+    display: inline;
+
     color: var(--color-texto) !important;
 
     font-family: "Orbitron", sans-serif;
@@ -56,10 +58,12 @@ h1, h2, h3, h4, h5, h6{
 }
 
 a{
+    color: var(--color-texto) !important;
     text-decoration: none !important;
 }
 
 .enlace{
+    color: var(--color-texto);
     display: inline;
     text-decoration: underline !important;
 }
