Filtros done, gestinarCompra done

--- a/public/CSS/paginacion.css
+++ b/public/CSS/paginacion.css
@@ -1,3 +1,7 @@
+.paginacion{
+    margin-top: 5%;
+}
+
 .pagination .page-link{
     color: var(--color-texto);
     background-color: rgb(128, 128, 128, 0.25);
