--- a/public/CSS/lista_ventas.css
+++ b/public/CSS/lista_ventas.css
@@ -62,6 +62,36 @@
     cursor: pointer;
 }
 
+    /* Filtros Desplegables */
+    .filtros_desplegable{
+        display: flex;
+        flex-direction: column;
+
+        align-self: start;
+
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 0.5s ease;
+        /* background-color: rgba(0, 0, 0, 0.5); */
+        /* z-index: 9999; */
+
+        color: var(--color-texto);
+        /* background-color: var(--color-secundario); */
+        border-radius: 0.375rem;
+    }
+
+    .filtros_desplegable .filtros_opciones{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .active{
+        max-height: 650px;
+        
+        /* Transform */
+        transition: 0.8s ease;
+    }
+
 /* Lista de Ventas */
 
 .centrar-div{
@@ -145,26 +175,4 @@
 .btn_listas img{
     max-width: 14px;
     padding: 0;
-}
-
-/* Desplegable hamburguesa */
-
-.filtros_desplegable{
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-
-    /* Transform */
-    transition: 0.5s;
-}
-
-.active{
-    left: 0%;
-
-    /* Transform */
-    transition: 0.5s;
 }
