--- a/public/CSS/carrusel.css
+++ b/public/CSS/carrusel.css
@@ -2,7 +2,7 @@
 
 /* Sin esto los slides se aumentan exponencialmente */
 .swiper{ 
-    width: 100%;
+    width: 70%;
 }
 
 .card-wrapper{
@@ -52,6 +52,10 @@
     color: var(--color-texto);
 }
 
+.swiper-pagination{
+    position: initial !important;
+}
+
 .swiper-pagination-bullet {
     background: black;
     opacity: 0.25;
@@ -65,6 +69,13 @@
 @media screen and (max-width: 768px) {
     .swiper-button-prev, .swiper-button-next{
         display: none;
+    }
+    
+}
+
+@media screen and (min-width: 1024px) {
+    .swiper{
+        width: 100%;
     }
     
 }
