--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -27,6 +27,10 @@ header{
     background-color: var(--color-fondo);
 }
 
+header h3{
+    margin-left: 5%;
+}
+
 .izq{
     display: flex;
     justify-content: center;
@@ -119,7 +123,7 @@ header i{
 .active{
     left: 0%;
     right: 0%;
-
+    max-height: 670px;
     /* Transform */
     transition: 0.5s;
 }
