--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -4,8 +4,8 @@
 
     box-sizing: border-box;
 
-    --color-primario: #5C6BC0;
-    --color-secundario: #BFA75C;
+    --color-primario: var(--color-borde-neon);
+    --color-secundario: var(--color-borde-neon);
     
     --color-fondo: linear-gradient(180deg,rgba(28, 28, 30, 1) 20%, rgba(166, 166, 166, 1) 100%);
     --color-texto: #FFFFFF;
