--- a/public/CSS/carrusel.css
+++ b/public/CSS/carrusel.css
@@ -2,7 +2,7 @@
 
 /* Sin esto los slides se aumentan exponencialmente */
 .swiper{ 
-    width: 70%;
+    width: 100vw;
 }
 
 .card-wrapper{
@@ -69,13 +69,6 @@
 @media screen and (max-width: 768px) {
     .swiper-button-prev, .swiper-button-next{
         display: none;
-    }
-    
-}
-
-@media screen and (min-width: 1024px) {
-    .swiper{
-        width: 100%;
     }
     
 }
