--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -1,11 +1,15 @@
 /* Css del Header */
 
+.header-escritorio{
+    display: none;
+}
+
 /* Escalar el tamaño de los iconos */
 .fa-bars{
     font-size: clamp(20px, 4vw, 30px); /* clamp(MIN, PRED, MAX) */
 }
 
-header{
+.header-movil{
     position: relative;
     z-index: 100;
 
@@ -19,7 +23,7 @@ header{
 
     border-bottom: 2px solid #000;
 
-    width: 100%;
+    width: 100vw;
     max-width: 100vw;
     padding: 10px 20px;
 
@@ -27,7 +31,7 @@ header{
     background-color: var(--color-fondo);
 }
 
-header h3{
+.header-movil h3{
     margin-left: 5%;
 }
 
@@ -50,7 +54,7 @@ header h3{
     max-width: 200px;
 }
 
-header i{
+.header-movil i{
     padding: 10px;
     background-color: var(--color-primario);
     border-radius: 8px;
@@ -78,6 +82,18 @@ header i{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.menu-hamburguesa.active{
+    left: 0;
+    top: 0;
+
+    max-height: 100vh;
+    height: fit-content;
+
+    transition: 0.5s;
+
+    border-bottom: 5px solid var(--color-borde-neon);
 }
 
 .links-hamburguesa{
@@ -120,14 +136,6 @@ header i{
     color: var(--color-texto);
 }
 
-.active{
-    left: 0%;
-    right: 0%;
-    max-height: 670px;
-    /* Transform */
-    transition: 0.5s;
-}
-
 .cerrar-hamburguesa{
     color: var(--color-texto);
 
@@ -138,4 +146,76 @@ header i{
 
 .logo-TDG{
     max-width: 80px;
+}
+
+#opciones{
+    font-size: 125%;
+
+    cursor: pointer;
+}
+
+.menu-hamburguesa-escritorio{
+    display: none;
+}
+
+/* Movimiento de las opciones */
+.fa-chevron-down {
+    transition: transform 1s ease;
+}
+
+.fa-chevron-down.rotado {
+    transform: rotate(180deg);
+}
+/* Media Queries */
+@media screen and (min-width: 1024px) {
+    .header-movil{
+        display: none;
+    }
+
+    .input-group{
+        width: 24% !important;
+    }
+
+    .header-escritorio{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 10px 20px;
+
+        width: 100vw;
+        max-width: 100vw;
+
+        color: var(--color-texto);
+        background-color: var(--color-fondo);
+    }
+
+    .link-hamburguesa{
+        font-size: 80%;
+    }
+
+    .link-hamburguesa h2{
+        font-size: 175%;
+    }
+    
+    .menu-hamburguesa-escritorio{
+        display: inline;
+        height: 0px;
+
+        align-self: flex-end;
+        justify-self: end;
+
+        transition: 1s;
+
+        border-bottom: 5px solid transparent;
+    }
+
+    .menu-hamburguesa-escritorio.active {
+        max-height: fit-content;
+        height: 100px;
+        border-bottom: 5px solid var(--color-borde-neon);
+
+        transition: 1s;
+    }
+
 }
