--- a/public/CSS/lista_ventas.css
+++ b/public/CSS/lista_ventas.css
@@ -182,3 +182,10 @@
     max-width: 14px;
     padding: 0;
 }
+
+@media screen and (min-width: 1024px) {
+    #lista_ventas{
+        grid-template-columns: repeat(4, 1fr);
+    }
+    
+}
