--- a/public/CSS/checkout.css
+++ b/public/CSS/checkout.css
@@ -105,3 +105,19 @@ body{
 
     color: var(--color-texto)
 }
+
+@media screen and (max-width: 426px){
+    .cuerpo{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .metodo_pago{
+        width: 100%;
+    }
+
+    .resumen_compra{
+        width: 100%;
+    }
+}
